修改help 内容